--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,41 @@ body {
     padding: 0;
 }
 
+.nav-item {
+    cursor: pointer;
+    user-select: none;
+}
+
+#game {
+    display: none;
+}
+
+.nav-subitem {
+    display: none;
+}
+
+.nav-item.active .nav-subitem {
+    display: block;
+}
+
+.start-button {
+    background-color: #0b3c5d;
+
+    color: #7cfc00;
+
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    width: 100%;
+
+}
+
+
 header {
     background-color: #022c43;
     padding: 20px;
